# status-service

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
docker/: Dockerfile  boot.sh  docker-compose.yml
docker/grafana/dashboards/: node-dashboard.json  redis-dashboard.json  status-service-dashboard.json
docker/html/: index.html
docker/nginx/: Dockerfile
docker/nginx/conf/: nginx.conf
docker/prometheus/: prometheus.yml
docker/telegraf/: telegraf.conf
lib/: CMakeLists.txt
lib/telemetry/: CMakeLists.txt  README.md  counter.cc  counter.h  gauge.cc  gauge.h  histogram.cc  histogram.h  summary.cc  summary.h  types.h
lib/telemetry/include/telemetry/: api.h
lib/telemetry/private/: counter.cc  gauge.cc  histogram.cc  summary.cc
lib/telemetry/public/: counter.h  gauge.h  histogram.h  metric_key.h  summary.h  types.h
src/: distributed_lock.h  http-server.cc  main.cc  main.cpp  redis_adapter.cc  tcp-server.cc
src/redis/: distributed_lock.h  redis_adapter.cc  redis_adapter.h
src/server/: connection.cc  connection.h  dispatcher.cc  dispatcher.h  router.cc  router.h  server.cc  server.h  types.h
src/server/http/: controller.h  parser.h  prometheus_controller.h  prometheus_http_handler.h  router.cc  router.h  sample_controller.h  sample_http_handler.h  types.h
src/server/service/: state_service.cc  state_service.h  telemetry.cc  telemetry.h
src/server/tcp/: connection.cc  connection.h  connection_pool.cc  connection_pool.h
